
12. Added 'group' argument to grid.animate() so that animation
    can apply EITHER to the individual child elements (the default)
    OR to the parent <g>.

13. Added vignette on extending the 'gridSVG' package.

    vignette("extensibility")

14. Added 'interpolate' argument to grid.animate()
    (only currently supports "linear" or "discrete").

15. Implemented animation for segments grobs.


Changes from 0.6-0 to 0.7-0
===========================

1.  Added support for polyline grobs (Simon)

2.  Polygon grobs now respect the id parameter (Simon)

3.  Semi-transparent colours can now be applied, making use of SVG's
    fill-opacity and stroke-opacity properties. (Simon)

4.  xsplines can be drawn. Currently uses the <polyline> or <path>
    elements depending on whether the xspline is open or closed. (Simon)

5.  Lines, segments, polylines, xsplines now support the arrow parameter.
    (Simon)

6.  Grobs that produce multiple SVG elements now wrap the multiple 
    elements in a <g> with the original grob name on the <g>
    and the multiple elements name-mangled with integer suffix. (Simon)

7.  Multiline text support added. (Simon)

8.  Text with multiple labels no longer draw all labels at each location.
    (Simon)

9.  Points (in particular, pch = 1) have more accurate radii. (Simon)

10. Raster grobs can be drawn. (Simon)

11. Every grob is now grouped in a <g> element. The group receives the name
    of the original grob but any elements that will be produced from that
    grob will receive the grob name with an integer suffix. (Simon)

12. Points grobs have been refactored and its parameters now obey the
    recycling rule. Grouping occurs where points require multiple
    elements. (Simon)

13. Line properties such as linejoin and lineend are now understood.
    (Simon)

14. The gpar() properties, font/fontface and fontfamily are now
    supported. "fontface" has a direct mapping to CSS, but fontfamily is a