@@ -53,6 +53,10 @@ Changes from 0.7-0 to 0.8-0
 
 15. Implemented animation for segments grobs.
 
+16. Improved recording of viewports and vpPaths, when depth
+    is greater than 1 (e.g., a vpStack).  Now all viewports
+    (not just the last one) are recorded as <g> elements.
+
 
 Changes from 0.6-0 to 0.7-0
 ===========================
